# grooveboy_cpp

./: .gitignore  CMakeLists.txt  bin
grooveboy_cpp_tiles/: structure.json
include/: bg.h  bin.h  boop.h  cursor.h  dma.h  edit.h  int.h  io.h  key.h  oam.h  pal.h  tmr.h  ui.h  vram.h
resources/: config.json  empty_art.csv
src/: bg.cpp  bin.cpp  boop.cpp  cursor.cpp  dma.cpp  edit.cpp  int.cpp  io.cpp  key.cpp  main.cpp  oam.cpp  pal.cpp  tmr.cpp  ui.cpp  vram.cpp
